Recorded merge of revisions 11015,11022-11041,11043,11053-11054,11056-11078,11080,11083-11087,11089-11095,11098-11106,11110,11112-11149,11153-11166,11171-11187,11189,11194-11196,11198-11248,11250-11304,11310-11320,11322,11329-11333 and _parts_ of revisions 11016,11019 via svnmerge from https://svn.codehaus.org/mule/branches/mule-2.x
........
  r11015 | tcarlson | 2008-02-25 18:47:04 -0200 (Mon, 25 Feb 2008) | 4 lines
  
  * MULE-2162 MuleConfiguration belongs to MuleContext
  * MULE-2162 ThreadingProfiles are a view on the Registry
........
  r11016 | tcarlson | 2008-02-25 18:48:30 -0200 (Mon, 25 Feb 2008) | 7 lines
  
  * MULE-2162 MuleConfiguration belongs to MuleContext
  * MULE-2162 ThreadingProfiles are a view on the Registry
........
  r11019 | tcarlson | 2008-02-25 18:56:48 -0200 (Mon, 25 Feb 2008) | 5 lines
  
........
  r11022 | tcarlson | 2008-02-25 19:06:46 -0200 (Mon, 25 Feb 2008) | 6 lines
  
  * Phasing out use of the singleton RegistryContext
  * MuleSession needs access to MuleContext for MuleConfiguration
  * MULE-2162 MuleConfiguration belongs to MuleContext
  * MULE-2162 ThreadingProfiles are a view on the Registry
........
  r11194 | tcarlson | 2008-03-06 01:48:54 -0200 (Thu, 06 Mar 2008) | 1 line
  
  Fix compilation error from merges
........
  r11322 | tcarlson | 2008-03-12 07:21:14 -0200 (Wed, 12 Mar 2008) | 5 lines
  
  * MULE-3092 Implement mechanism to configure IDs, encoding and working directory when MuleContext is created.
  * Consolidate all Mule System Properties in MuleConfiguration.java (DebugOptions, MessageScribbling)
  * Remove archaic/unused properties
........
  r11330 | tcarlson | 2008-03-12 10:38:16 -0200 (Wed, 12 Mar 2008) | 1 line
  
  Fix and unit test for MULE-3092
........
  r11331 | tcarlson | 2008-03-12 11:27:52 -0200 (Wed, 12 Mar 2008) | 1 line
  
  Archaic class was causing CI failures
........
  r11332 | tcarlson | 2008-03-12 12:31:18 -0200 (Wed, 12 Mar 2008) | 1 line
  
  Fix NPE
........
  r11333 | tcarlson | 2008